--- a/css/custom.css
+++ b/css/custom.css
@@ -1,15 +1,36 @@
+body {
+  background-image: url('../img/bg2.png');
+  color: white;
+
+}
 h1 {
   text-align: center;
-  color: #d73773;
+  font-family: 'Sigmar One', cursive;
 }
 table {
   margin: 30 auto;
-  height: 420;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 td{
   height:70px;
   width: 70px;
   border: 1px solid #e4e4e4;
+}
+.follow{
+  position: absolute;
+  height: 70px;
+  width: 70px;
+}
+#gameboard {
+  height: 420;
+}
+#control {
+  width: 420px;
+  font-family: 'Ropa Sans', sans-serif;
+}
+
+#control td {
+  padding: 10px;
 }
 
 
@@ -18,40 +39,86 @@ td{
   margin: 0 auto;
   width: 50px;
   height: 50px;
-  border-radius: 30px;
-  background: #11d1c8;
+  /*border-radius: 30px;*/
+  /*background: #11d1c8;*/
+  content: url('../img/1.png');
 }
+
+.a-info::after{
+  content:"Combine three earths into one moon";
+}
+.b-info{
+  content:'Combine three earths into one moon';
+}
+
+.c-info{
+  content:'Combine three earths into one moon';
+}
+
+.d-info{
+  content:'Combine three earths into one moon';
+}
+
+.e-info{
+  content:'Combine three earths into one moon';
+}
+
 
 .b{
   margin: 0 auto;
   width: 50px;
   height: 50px;
-  border-radius: 30px;
-  background: #dd86ff;
+  /*border-radius: 30px;
+  background: #dd86ff;*/
+  content: url('../img/2.png');
 }
 
 .c{
   margin: 0 auto;
   width: 50px;
   height: 50px;
-  border-radius: 30px;
-  background: #ff77b1;
+  /*border-radius: 30px;
+  background: #ff77b1;*/
+  content: url('../img/3.png');
 }
 
 .d{
   margin: 0 auto;
   width: 50px;
   height: 50px;
-  border-radius: 30px;
-  background: #ffa268;
+  /*border-radius: 30px;*/
+  /*background: #ffa268;*/
+  content: url('../img/4.png');
 }
 
 .e{
   margin: 0 auto;
   width: 50px;
   height: 50px;
-  border-radius: 30px;
-  background: #ffd271;
+  /*border-radius: 30px;*/
+  /*background: #ffd271;*/
+  content: url('../img/5.png');
+}
+
+.enemy{
+  margin: 0 auto;
+  width: 50px;
+  height: 50px;
+  content: url('../img/alien.png');
+}
+
+.crystal{
+  margin: 0 auto;
+  width: 50px;
+  height: 50px;
+  content: url('../img/solar-system.png');
+}
+
+.remove{
+  margin: 0 auto;
+  width: 50px;
+  height: 50px;
+  content: url('../img/lander.png');
 }
 
 #instruct {
