--- a/css/custom.css
+++ b/css/custom.css
@@ -27,10 +27,11 @@ td{
 #control {
   width: 420px;
   font-family: 'Ropa Sans', sans-serif;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 #next {
-  text-align: center;
   padding: 10px;
 }
 
@@ -119,6 +120,13 @@ td{
   width: 50px;
   height: 50px;
   content: url('../img/lander.png');
+}
+
+.obstacle{
+  margin: 0 auto;
+  width: 50px;
+  height: 50px;
+  content: url('../img/obstacle.png');
 }
 
 #instruct {
