--- a/css/custom.css
+++ b/css/custom.css
@@ -156,7 +156,7 @@ td{
   margin: 0 auto;
   width: 50px;
   height: 50px;
-  content: url('../img/lander.png');
+  content: url('../img/meteorites.png');
 }
 
 .obstacle{
