--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,76 @@
 body {
-  background-image: url('../img/bg7.png');
+  background-image: url('../img/bg8.png');
   background-size: cover;
   color: white;
   overflow: hidden;
   font-family: 'Ropa Sans', sans-serif;
   text-align: center;
 }
+
+#human {
+  /*background-image: url('../img/human.png');
+  background-position: 0 65%;
+  background-repeat: no-repeat;
+  */
+  position: absolute;
+  width: 120px;
+  margin-left: -340px;
+  margin-top: 180px;
+/*  margin-left: -50px;
+  margin-top: 130px;*/
+  z-index: -1;
+}
+
+.floating{
+    float: left;
+    -webkit-animation-name: Floatingx;
+    -webkit-animation-duration: 20s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    -moz-animation-name: Floating;
+    -moz-animation-duration: 20s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px;
+
+}
+
+@-webkit-keyframes Floatingx{
+    from {-webkit-transform:translate(0, 0px);}
+    65% {-webkit-transform:translate(0, 10px);}
+    to {-webkit-transform: translate(0, -0px);    }
+}
+
+@-moz-keyframes Floating{
+    from {-moz-transform:translate(0, 0px);}
+    65% {-moz-transform:translate(0, 10px);}
+    to {-moz-transform: translate(0, -0px);}
+}
+
+.scaling{
+    float: left;
+    -webkit-animation-name: scalex;
+    -webkit-animation-duration:3s;
+    -webkit-animation-iteration-count:infinite;
+    -webkit-animation-timing-function:ease-in-out;
+    -moz-animation-name: scale;
+    -moz-animation-duration:3s;
+    -moz-animation-iteration-count:infinite;
+    -moz-animation-timing-function:ease-in-out;
+}
+
+    @-webkit-keyframes scalex{
+        from {-webkit-transform: scale(0.9);}
+        65% {-webkit-transform: scale(1.0);}
+        to {-webkit-transform: scale(0.9);}
+    }
+
+    @-moz-keyframes scale{
+        from {-moz-transform: scale(0.9);}
+        65% {-moz-transform: scale(1.0);}
+        to {-moz-transform: scale(0.9);}
+    }
 
 .modal-content{
   border-radius: 40px;
@@ -40,7 +105,8 @@ body {
 }
 h1 {
   text-align: center;
-  font-family: 'Sigmar One', cursive;
+  /*font-family: 'Sigmar One', cursive;*/
+  font-family: 'Voltaire', sans-serif;
 }
 #gameboard, #control {
   margin: 30 auto;
